--- a/src/app/pages/movie-list/movie-list.component.html
+++ b/src/app/pages/movie-list/movie-list.component.html
@@ -1,6 +1,6 @@
 <h2 class="content-block">Movie List</h2>
 <div class="content-block">
-    <dx-data-grid id="movieGrid" [dataSource]="movies" keyExpr="id">
+    <dx-data-grid id="movieGrid" [dataSource]="movies" keyExpr="idPelicula">
         
     </dx-data-grid>    
 </div>
